# fastapi-react-admin

./: README.md  pyproject.toml
fastapi_react_admin/: __init__.py  react_admin.py  schemas.py
